--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-body{
+* {
+    font-family: "DM Serif Text", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+body {
     background-color: black;
 }
 
@@ -18,17 +24,42 @@ footer {
     min-height: 90px;
 }
 
-td img{
+td img {
     width: 50px;
     height: 50px;
 }
 
-table{
+table {
     border: 2px solid white;
 }
 
 .equipo img {
-    height: 150px;
-    width: 150px;
+    height: 300px;
+    width: 300px;
 }
 
+.borde {
+    color: white;
+    border-radius: 8px;
+    text-shadow:
+        1px 1px 0px black,
+        /* sombra abajo derecha */
+        -1px 1px 0px black,
+        /* sombra abajo izquierda */
+        1px -1px 0px black,
+        /* sombra arriba derecha */
+        -1px -1px 0px black;/
+}
+
+.puntero {
+    cursor: pointer;
+}
+
+.loader {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(0, 0, 0, 0.7);
+}
